Cambios añadidos a Servicios.html

--- a/Servicios.html
+++ b/Servicios.html
@@ -6,12 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Mi Sitio Web 2.5.4</h1>
+    </header>
     <main>
         <h1>Pagina de Servicios de Mario Bajo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
              Omnis at autem facilis ad inventore modi eum fuga accusamus 
              voluptatum, maiores ea vitae nulla veritatis. Perferendis, suscipit. 
              Aut repellendus dolor possimus.</p>
+             <nav>
+                <ul>
+                    <li>Hola</li>
+                    <li>ADIOS</li>
+                </ul>
+             </nav>
     </main>
+    <footer>
+        <h1>Fin de la Página</h1>
+    </footer>
 </body>
 </html>
